refactor: refact conn.go and change db config

--- a/config/cfg.toml
+++ b/config/cfg.toml
@@ -2,4 +2,4 @@
 port = "8180"
 
 [db]
-stringConn = "postgres://postgres:postgres@localhost:5432/financial?sslmode=disable" 
+stringConn = "postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable" 
